Add gui for new games