@@ -33,6 +33,8 @@ List<String> runArgs = [
         "--add-opens", "com.crschnick.pdx_unlimiter.core/com.crschnick.pdx_unlimiter.core.info.ck3=com.fasterxml.jackson.databind",
         "--add-opens", "com.crschnick.pdx_unlimiter.core/com.crschnick.pdx_unlimiter.core.info.hoi4=com.fasterxml.jackson.databind",
         "--add-opens", "com.crschnick.pdx_unlimiter.core/com.crschnick.pdx_unlimiter.core.info.stellaris=com.fasterxml.jackson.databind",
+        "--add-opens", "com.crschnick.pdx_unlimiter.core/com.crschnick.pdx_unlimiter.core.info.ck2=com.fasterxml.jackson.databind",
+        "--add-opens", "com.crschnick.pdx_unlimiter.core/com.crschnick.pdx_unlimiter.core.info.vic2=com.fasterxml.jackson.databind",
         "-Xmx4g",
         "-XX:+ExitOnOutOfMemoryError"]
 
